resources/testcases_static_checks/tests/positive/isGlutGuarded/e28plus.rls
../../../tests_common_data/rule-classification-examples/e28plus.rls