resources/testcases_static_checks/tests/negative/isDatalog/joinless-with-existential.rls
../../../tests_common_data/rule-classification-examples/joinless-with-existential.rls